--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="image" accept="image/*" required>
         <input type="submit" value="Upload Image">
+        <div>
+            <input type="checkbox" id="showObjects" name="showObjects" checked>
+            <label for="showObjects">Show detected objects</label>
+        </div>
     </form>
     <br>
     <div id="result"></div>
@@ -16,6 +20,7 @@
         document.querySelector('form').addEventListener('submit', (event) => {
             event.preventDefault();
             const formData = new FormData(event.target);
+            const showObjects = document.querySelector('#showObjects').checked;
 
             fetch('/upload', {
                 method: 'POST',
@@ -25,19 +30,19 @@
             .then(data => {
                 const imageName = data.imageName;
 
-                fetch(`/analyze/${imageName}`)
-                .then(response => response.blob())
-                .then(blob => {
-                    const img = new Image();
-                    img.onload = () => {
-                      URL.revokeObjectURL(img.src);
-                    };
-                    img.src = URL.createObjectURL(blob);
+            fetch(`/analyze/${imageName}?showObjects=${showObjects}`)
+            .then(response => response.blob())
+            .then(blob => {
+            const img = new Image();
+            img.onload = () => {
+              URL.revokeObjectURL(img.src);
+            };
+            img.src = URL.createObjectURL(blob);
 
-                    const resultDiv = document.querySelector('#result');
-                    resultDiv.innerHTML = '';
-                    resultDiv.appendChild(img);
-                });
+            const resultDiv = document.querySelector('#result');
+            resultDiv.innerHTML = '';
+            resultDiv.appendChild(img);
+        });
             });
         });
     </script>
