--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Image Analysis</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Upload an Image</h1>
+    <div><h1>Image Analysis</h1>
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="image" accept="image/*" required>
+        <label for="image" class="file-input">Select Image</label>
+        <input type="file" id="image" name="image" accept="image/*" required>
         <input type="submit" value="Upload Image">
         <div>
             <input type="checkbox" id="showObjects" name="showObjects" checked>
